@@ -1,3 +1,6 @@
+2009-06-14 - Sean Huber (shuber@huberry.com)
+  * Update Nestable interface logic
+
 2009-06-13 - Sean Huber (shuber@huberry.com)
   * Initial commit
   * Add Nestable::Tree logic
